GET endpoints for crawled pages DB
